<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/promptForIpAddEn" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/ipv4AddressOctet1"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/ipv4AddressOctet2"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/ipv4AddressOctet3"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/ipv4AddressOctet4"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

        </TableRow>

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/promptForSubnetMaskEn" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/subnetMaskOctet1"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/subnetMaskOctet2"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/subnetMaskOctet3"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/subnetMaskOctet4"
                android:layout_width="70dip"
                android:maxLength="3"
                android:inputType="number" />

        </TableRow>

        <TextView
            android:id="@+id/message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/promptForNumberOfSubnetsEn" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/numberOfSubnets"
                android:maxLength="3"
                android:inputType="number" />

        </TableRow>

        <TextView
            android:id="@+id/message4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/promptForNumberOfHostsEn" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/numberOfHosts"
                android:maxLength="3"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/okStr"
                android:visibility="visible"
                android:onClick="callGetRequirementsActivity" />

        </TableRow>

    </TableLayout>

</ScrollView>